Add per-client speed limits and fork installer
